--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -1,7 +1,7 @@
 doctype
 html
   head
-    link(rel="stylesheet" href="/main.css")
+    link(rel="stylesheet" href="main.css")
   body
     != yield
     
