--- a/yuhua/css/style.css
+++ b/yuhua/css/style.css
@@ -302,8 +302,7 @@ hr {
 .intro {
 	width:100%;
 	position:relative;
-	
-	background: url(../img/bg1.jpg) no-repeat top center;
+	background: url(../img/bg1.jpg) no-repeat center center;background-size:cover;
 }
 
 #intro.intro {
